service/http-go-np.yaml
apiVersion: v1
kind: Service
metadata:
    name: http-go-np
spec:
    type: NodePort
    selector:
        app: http-go
    ports:
        - protocol: TCP
          port: 80
          targetPort: 8008
          nodePort: 30001
