service/http-go.yaml
apiVersion: v1
kind: Service
metadata:
    name: http-go-svc
spec:
    selector:
        app: http-go
    ports:
        - protocol: TCP
          port: 80
          targetPort: 8008

---
apiVersion: apps/v1
kind: Deployment
metadata:
    creationTimestamp: null
    labels:
        app: http-go
    name: http-go
spec:
    replicas: 1
    selector:
        matchLabels:
            app: http-go
    strategy: {}
    template:
        metadata:
            creationTimestamp: null
            labels:
                app: http-go
        spec:
            containers:
                - image: gasbugs/http-go
                  name: http-go
                  ports:
                      - containerPort: 8080
                  resources: {}
status: {}
